first attempt at masking the array with numpy.ma

--- a/scripts/index_values.ipynb
+++ b/scripts/index_values.ipynb
@@ -525,6 +525,97 @@
    "source": [
     "gli_values[120:180,220:280]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70060cc5-9220-4918-8d26-31ffb77d8d42",
+   "metadata": {},
+   "source": [
+    "## masked arrays\n",
+    "\n",
+    "We first try masking unnecessary values of the index (the triangular margins outside of the ROI).\n",
+    "We do this by **masking index values calculated on out-of-shape pixels**.\n",
+    "\n",
+    "This is a quick-n-dirty initial attempt.\n",
+    "A better way would be to mask directly the grey pixels in the input RGB image data (TODO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "00750cf3-fe0b-43f0-ab18-53994f2d36ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_0 = gli_values == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5e06c41d-dc87-4183-bc05-f617ba28138c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked_gli = ma.masked_array(gli_values, mask_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "137fde80-0e18-4992-82e8-91fc3f87ad30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "masked_array(\n",
+       "  data=[[--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        ...,\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --]],\n",
+       "  mask=[[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "  fill_value=1e+20)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masked_gli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1cc5563b-f3a9-46e3-9b51-1c0d550eb28d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2693588421803357"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ma.mean(masked_gli)"
+   ]
   }
  ],
  "metadata": {
