extending the masking to the input RGB image: first lines of code

--- a/scripts/index_values.ipynb
+++ b/scripts/index_values.ipynb
@@ -616,6 +616,67 @@
    "source": [
     "np.ma.mean(masked_gli)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b43b565-14a9-46e9-8831-0d136164d113",
+   "metadata": {},
+   "source": [
+    "### Masking directly the input data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "91288465-218e-49eb-93e8-c42ceef31f2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pic = imageio.imread(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9d5df407-dc3c-4e54-899e-879d250f45ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_0 = (pic[:,:,0] & pic[:,:,1] & pic[:,:,2] == 63)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a41a876e-b44f-484b-a2a6-7d253b763733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       ...,\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask_0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cfeebae-1bd0-41db-9280-246d0a5f1cdf",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
