updating the notebook on vegetation indices

--- a/scripts/index_values.ipynb
+++ b/scripts/index_values.ipynb
@@ -7,25 +7,35 @@
    "source": [
     "## Explore how a vegetation index is calculated: effect of thresholding\n",
     "\n",
-    "We take as example one image (example RGB image from `drone2report`) and with one vegetation index, **GLI** in this illustration.\n",
+    "In this illustration, we take as example one RGB image of a single plot (`.png` thumbnail from `drone2report`), and one vegetation index, **GLI** (Green Leaf Index (more [here](https://www.indexdatabase.de/db/i-single.php?id=375)).\n",
     "\n",
-    "We start by import libraries: we are using the `imageio` *Python* library for input/output of image data (tiff raster images in this illustration):"
+    "We start by import libraries: we are using the `imageio` *Python* library for input/output of image data (png/tiff raster images in this illustration):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 117,
    "id": "0959b018-4a3d-4e94-8c27-8289f60028c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "import numpy.ma as ma\n",
     "import imageio.v2 as imageio\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 118,
    "id": "91decc77-ae85-4aa1-836b-f34a663f824f",
    "metadata": {},
    "outputs": [],
@@ -36,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 119,
    "id": "04a53192-e2d8-4a8c-83a5-1132fd389fd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa6ac3ca6f0>"
+       "<matplotlib.image.AxesImage at 0x7fdae749a1b0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "id": "ab6a4cf3-06de-401a-87e1-2fc820c054fb",
    "metadata": {},
    "outputs": [
@@ -76,22 +86,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type of the image :  <class 'numpy.ndarray'>\n",
-      "\n",
       "Shape of the image : (707, 612, 3)\n",
-      "Image Hight 707\n",
-      "Image Width 612\n",
-      "Dimension of Image 3\n"
+      "Total n. of pixels: 432684\n"
      ]
     }
    ],
    "source": [
-    "print('Type of the image : ' , type(pic))\n",
-    "print()\n",
     "print('Shape of the image : {}'.format(pic.shape))\n",
-    "print('Image Hight {}'.format(pic.shape[0]))\n",
-    "print('Image Width {}'.format(pic.shape[1]))\n",
-    "print('Dimension of Image {}'.format(pic.ndim))"
+    "\n",
+    "print('Total n. of pixels:', pic.shape[0]*pic.shape[1])"
    ]
   },
   {
@@ -99,125 +102,130 @@
    "id": "b928dd89-e8b6-4890-a024-bf8c0958f72c",
    "metadata": {},
    "source": [
-    "The input image has the characteristics detailed above, e.g. 3 channels and size 707 x 612 (height, width): **total number of input pixels is 432,684**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28a24205-2890-43ba-af8f-8bbd4bb3b58e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.title('R channel')\n",
-    "plt.ylabel('Height {}'.format(pic.shape[0]))\n",
-    "plt.xlabel('Width {}'.format(pic.shape[1]))\n",
+    "The input image has the characteristics detailed above, e.g. 3 channels and size 707 x 612 (height, width): **total number of input pixels is 432,684**.\n",
     "\n",
-    "plt.imshow(pic[ : , : , 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c44e0a0c-9431-4ab3-b79c-b92de91398fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.title('R channel')\n",
-    "plt.ylabel('Height {}'.format(pic.shape[0]))\n",
-    "plt.xlabel('Width {}'.format(pic.shape[1]))\n",
+    "## Calculating the GLI index\n",
     "\n",
-    "plt.imshow(pic[ : , : , 1])\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb165ca7-72bd-4849-954c-0c914d351987",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.title('R channel')\n",
-    "plt.ylabel('Height {}'.format(pic.shape[0]))\n",
-    "plt.xlabel('Width {}'.format(pic.shape[1]))\n",
+    "First, we calculate the GLI index manually:\n",
     "\n",
-    "plt.imshow(pic[ : , : , 2])\n",
-    "plt.show()"
+    "1. we first define the three channels\n",
+    "2. we then separate the three channels from the `numpy` array:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4101fca-0051-4818-ad52-a04893d4e481",
+   "execution_count": 129,
+   "id": "0973bfb8-1a91-4bdb-ae4d-9c2e9991b438",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channels = ['red','green','blue']\n",
+    "channels.index('red')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "5772384a-6784-494e-ac4c-77710f01c4f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pic[ : , : , 2]"
+    "red   = pic[:,:,channels.index('red')]\n",
+    "green = pic[:,:,channels.index('green')]\n",
+    "blue  = pic[:,:,channels.index('blue')]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4060f4e8-9d7c-4e0a-aa40-3e9dd0014246",
+   "cell_type": "markdown",
+   "id": "9fc5c7b6-754f-4a56-bd68-403ba13ecbbc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pic = imageio.imread(fname)\n",
-    "\n",
-    "pic[0:720 , : , 0] = 255 # full intensity to those pixel's R channel\n",
-    "plt.figure()\n",
-    "plt.imshow(pic)\n",
-    "plt.show()\n"
+    "These are three 2D arrays of numbers (pixel intensities), corresponding to the three color channels:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54b8eb91-d353-402e-9d97-d6eb53bbcba6",
+   "execution_count": 131,
+   "id": "ab6f5649-7685-48a0-bc69-e0b46a36ae1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[63, 63, 63, ..., 63, 63, 63],\n",
+       "       [63, 63, 63, ..., 63, 63, 63],\n",
+       "       [63, 63, 63, ..., 63, 63, 63],\n",
+       "       ...,\n",
+       "       [63, 63, 63, ..., 63, 63, 63],\n",
+       "       [63, 63, 63, ..., 63, 63, 63],\n",
+       "       [63, 63, 63, ..., 63, 63, 63]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import numpy.ma as ma"
+    "red"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dccef8e-56cd-41d5-a5bf-7fd56613fb29",
+   "cell_type": "markdown",
+   "id": "8f5d47bb-bd2e-4fce-9e6b-a2afd8cd2e68",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pic = imageio.imread(fname)\n",
-    "\n",
-    "fig, ax = plt.subplots(nrows = 1, ncols=3, figsize=(15,5))\n",
-    "\n",
-    "for c, ax in zip(range(3), ax):\n",
-    "    \n",
-    "    # create zero matrix\n",
-    "    split_img = np.zeros(pic.shape, dtype=\"uint8\") # 'dtype' by default: 'numpy.float64'\n",
-    "    \n",
-    "    # assing each channel \n",
-    "    split_img[ :, :, c] = pic[ :, :, c]\n",
-    "    \n",
-    "    # display each channel\n",
-    "    ax.imshow(split_img)"
+    "We then take the equation to calculate the GLI index and implement it using our arrays:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f2add14-c722-492d-99e9-e3822e652c5c",
+   "execution_count": 132,
+   "id": "bfd08fea-deac-4a14-be65-c7675f0398dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.11683168, 0.14558473, 0.14583333, ..., 0.23611111, 0.19034853,\n",
+       "        0.14285714],\n",
+       "       [0.10071942, 0.12      , 0.16022099, ..., 0.31726908, 0.21052632,\n",
+       "        0.13443831],\n",
+       "       [0.11380145, 0.11794872, 0.12280702, ..., 0.31782946, 0.23863636,\n",
+       "        0.15037594],\n",
+       "       ...,\n",
+       "       [0.14482759, 0.09965636, 0.05365854, ..., 0.1559633 , 0.12115732,\n",
+       "        0.11015737],\n",
+       "       [0.07407407, 0.0660793 , 0.05122494, ..., 0.15580737, 0.15447154,\n",
+       "        0.10119048],\n",
+       "       [0.05900151, 0.06616257, 0.04901961, ..., 0.20677966, 0.1416309 ,\n",
+       "        0.11612903]])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pic[0:10, 0:10, 0]"
+    "temp = (2.0*green - red - blue) / (2.0*green + red + blue)\n",
+    "temp[100:120, 220:280]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "03409900-9167-4733-a7c7-8a02bdaa215f",
    "metadata": {},
    "outputs": [],
@@ -241,55 +249,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0973bfb8-1a91-4bdb-ae4d-9c2e9991b438",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels = ['red','green','blue']\n",
-    "channels.index('red')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5772384a-6784-494e-ac4c-77710f01c4f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "red   = pic[:,:,channels.index('red')]\n",
-    "green = pic[:,:,channels.index('green')]\n",
-    "blue  = pic[:,:,channels.index('blue')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab6f5649-7685-48a0-bc69-e0b46a36ae1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "red"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfd08fea-deac-4a14-be65-c7675f0398dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(2.0*green - red - blue) / (2.0*green + red + blue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9993e155-626f-41e8-bd2a-e957f8b47ebc",
    "metadata": {},
    "outputs": [],
    "source": [
     "gli_values = GLI(pic, channels)\n",
-    "gli_values"
+    "gli_values[100:120, 220:280]"
    ]
   },
   {
@@ -317,7 +282,7 @@
    "id": "70060cc5-9220-4918-8d26-31ffb77d8d42",
    "metadata": {},
    "source": [
-    "## masked arrays\n",
+    "## Masked arrays\n",
     "\n",
     "We first try masking unnecessary values of the index (the triangular margins outside of the ROI).\n",
     "We do this by **masking index values calculated on out-of-shape pixels**.\n",
@@ -383,7 +348,7 @@
    "source": [
     "#### N. of total pixels in the index matrix\n",
     "\n",
-    "Why fewer than the n. of pixels in the original image?"
+    "Why fewer than the n. of pixels in the original image? $\\rightarrow$ This is a png/jpeg thumbnail, not the original tiff file!! (lower resolution $\\rightarrow$ fewer pixels)"
    ]
   },
   {
@@ -435,6 +400,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e442e28-4c62-4b07-804b-7df30dfd996b",
+   "metadata": {},
+   "source": [
+    "Sanity check: let's view the current image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d67d5cfd-1d5d-4d1c-895d-1ffeee8b728d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.imshow(pic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed911060-28ce-4f98-b433-a27a425f8392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pic[:,:,0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9d5df407-dc3c-4e54-899e-879d250f45ff",
@@ -451,14 +445,222 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_0"
+    "mask_0[100:160,160:220]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5ad113d-9f41-4de4-8389-e962dd5b2302",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "The n. of masked pixels is slightly different compared to the masking of the GLI index values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73ca2e35-3254-4382-afe7-e1bcf5c17f0e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "np.ma.sum(mask_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e738e86b-fa72-436c-8bba-3dbc36fb4d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_0.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3c7063f-0c32-4ef1-9697-e100e876af1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_tot = np.dstack((mask_0,mask_0,mask_0))\n",
+    "mask_tot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "382e820e-bfcb-493d-afa7-dc1272d8763b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_tot[100:160,160:220,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72de6879-0146-445c-948d-5de200683822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pic[120:160, 160:220, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02ad44e-ba4f-48f6-ab5e-d4105cbac225",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked_pic = ma.masked_array(pic, mask_tot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95226b49-56e0-4e8a-8458-00d37838e7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked_pic[120:160, 180:220, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a39f460-b07c-4468-984f-f7058465439c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "red   = masked_pic[:,:,channels.index('red')]\n",
+    "green = masked_pic[:,:,channels.index('green')]\n",
+    "blue  = masked_pic[:,:,channels.index('blue')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "362b0a1f-a0dd-45a3-aac8-9e0f91fb812e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "red[120:160, 180:220]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f275e52b-4346-4b30-9640-6f7376f453a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = (2.0*green- red- blue) / (2.0*green + red + blue)\n",
+    "temp[120:160, 180:220]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e376287d-d921-4794-a4cc-6ff319cd93d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.ma.mean(temp)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "0cfeebae-1bd0-41db-9280-246d0a5f1cdf",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Tiff image files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52fa845b-cc37-4b9b-894e-6bc9e176b598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = '../../paper-drone2report/data/example_RGB/single_RGB_plot.tiff'\n",
+    "pic = imageio.imread(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b00fca1-4b8c-411a-9e95-e5159df4c16a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.imshow(pic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91338969-47d5-44f0-bc02-427696efec2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Type of the image : ' , type(pic))\n",
+    "print()\n",
+    "print('Shape of the image : {}'.format(pic.shape))\n",
+    "print('Image Hight {}'.format(pic.shape[0]))\n",
+    "print('Image Width {}'.format(pic.shape[1]))\n",
+    "print('Dimension of Image {}'.format(pic.ndim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1db12b-b1d0-4c25-b15a-ec8f456b936d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "706*611"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b04d212c-d224-456b-bf12-a715a095e119",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "im = Image.open(fname)\n",
+    "im.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7e3ac6e-6caf-40ef-96fa-e331fcc14bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pic.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d1c5dc-8c26-439b-a23f-b60c9012950c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imarray = np.array(im)\n",
+    "imarray"
+   ]
   }
  ],
  "metadata": {
