removed: old part on tiff images

--- a/scripts/index_values.ipynb
+++ b/scripts/index_values.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "id": "bfd08fea-deac-4a14-be65-c7675f0398dd",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "        0.2125    ]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "id": "755a58b1-a195-4b4f-b410-07853d97d71d",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "       [nan, nan, nan, ..., nan, nan, nan]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "id": "ab6f5649-7685-48a0-bc69-e0b46a36ae1b",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "id": "7712cc29-d896-4fca-b99b-3d401e194ae3",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
     }
    ],
    "source": [
-    "avg = np.nanmean(gli_values)\n",
+    "avg = np.nanmean(gli)\n",
     "print(\"Average GLI value calculated manually, where divisions by zero returned NaN's:\", round(avg,5))"
    ]
   },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "id": "0e30b67c-fbf5-4bf1-adbd-921527036f61",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "        0.2125    ]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "id": "3f9804ed-283c-4389-aebe-e49fbd53beaa",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "id": "d426c357-63a8-491c-aafa-5d4dfad80049",
    "metadata": {},
    "outputs": [
@@ -461,15 +461,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347cd373-0958-4ae9-8d24-984584eca08a",
+   "id": "e5792c37-5a48-4ec6-9427-c4fdbacbcaf5",
    "metadata": {},
    "source": [
-    "Then we use a function to streamline and automate the different operations involved in the calculation of the GLI index:"
+    "Now there are no `nan`'s, therefore we can use the usual function `np.mean()`: however, 0's are numbers!! \n",
+    "They add nothing to the numerator, but add counts to the denominator, and the results is consequently biased downward:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
+   "id": "17a6d338-e040-4a55-a71a-43a01ee7c7fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average GLI value calculated manually, where divisions by zero returned 0's: 0.15489\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg = np.mean(gli)\n",
+    "print(\"Average GLI value calculated manually, where divisions by zero returned 0's:\", round(avg,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "347cd373-0958-4ae9-8d24-984584eca08a",
+   "metadata": {},
+   "source": [
+    "We see that the corners around the crop plot introduce some operational and interpretation problems, either when they are `nan`'s or when they're forced to be 0's.\n",
+    "\n",
+    "A better solution is needed: this is **masking**, i.e. unnecessary pixels like those in the corners are \"masked\", hence not used in the calculations (no problems with `nan`s or 0's).\n",
+    "\n",
+    "Before moving on to masking, we wrap all the code needed to calculate the GLI index into a **function**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "id": "03409900-9167-4733-a7c7-8a02bdaa215f",
    "metadata": {},
    "outputs": [],
@@ -492,40 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 103,
    "id": "9993e155-626f-41e8-bd2a-e957f8b47ebc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.33333333, 0.16738197, 0.14285714, ..., 0.43459916, 0.29449838,\n",
-       "        0.22921914],\n",
-       "       [0.28767123, 0.15736041, 0.15283843, ..., 0.30744337, 0.33333333,\n",
-       "        0.32867133],\n",
-       "       [0.5862069 , 0.38461538, 0.31764706, ..., 0.26011561, 0.35849057,\n",
-       "        0.42      ],\n",
-       "       ...,\n",
-       "       [0.66336634, 0.64516129, 0.49707602, ..., 0.07614213, 0.10854503,\n",
-       "        0.27179487],\n",
-       "       [0.55371901, 0.55555556, 0.61904762, ..., 0.078203  , 0.11020408,\n",
-       "        0.18461538],\n",
-       "       [0.47368421, 0.57480315, 0.64705882, ..., 0.15226337, 0.14285714,\n",
-       "        0.2125    ]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gli_values = GLI(pic, channels)"
+    "gli = GLI(pic, channels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "id": "f21cfa05-4b12-4d0a-9e46-f6103e485d84",
    "metadata": {},
    "outputs": [
@@ -547,18 +556,18 @@
        "        0.2125    ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gli_values[100:120, 220:280]"
+    "gli[100:120, 220:280]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 105,
    "id": "f4076cb9-65bf-4145-a984-c8b3d54bb6a2",
    "metadata": {},
    "outputs": [
@@ -568,13 +577,13 @@
        "0.2680817643550665"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.nanmean(gli_values)"
+    "np.nanmean(gli)"
    ]
   },
   {
@@ -593,30 +602,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
+   "id": "830e9096-7a37-4f9e-a871-c65557b83275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       ...,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "id": "00750cf3-fe0b-43f0-ab18-53994f2d36ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_0 = gli_values == 0"
+    "mask_0 = np.isnan(gli)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
+   "id": "b2f18164-59ef-44ed-b997-2a99ee8a6048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       ...,\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True,  True, ...,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "id": "5e06c41d-dc87-4183-bc05-f617ba28138c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "masked_gli = ma.masked_array(gli_values, mask_0)"
+    "masked_gli = ma.masked_array(gli, mask_0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "137fde80-0e18-4992-82e8-91fc3f87ad30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "masked_array(\n",
+       "  data=[[--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        ...,\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --],\n",
+       "        [--, --, --, ..., --, --, --]],\n",
+       "  mask=[[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "  fill_value=1e+20)"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "masked_gli"
    ]
@@ -631,12 +720,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "6c3d6bdb-5e06-4610-93e9-a57bafcb788d",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "185975"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.ma.sum(mask_0)"
    ]
@@ -653,12 +753,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "95f36c48-cc9d-467d-b750-473eb552c88a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440461"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mask_0.shape[0] * mask_0.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "3c826cc7-9d9c-4a7c-9a0b-d4c557153f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "254486"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mask_0.shape[0] * mask_0.shape[1]) - np.ma.sum(mask_0)"
    ]
   },
   {
@@ -872,94 +1004,6 @@
    "outputs": [],
    "source": [
     "np.ma.mean(temp)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cfeebae-1bd0-41db-9280-246d0a5f1cdf",
-   "metadata": {},
-   "source": [
-    "## Tiff image files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52fa845b-cc37-4b9b-894e-6bc9e176b598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fname = '../../paper-drone2report/data/example_RGB/single_RGB_plot.tiff'\n",
-    "pic = imageio.imread(fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b00fca1-4b8c-411a-9e95-e5159df4c16a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.imshow(pic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91338969-47d5-44f0-bc02-427696efec2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Type of the image : ' , type(pic))\n",
-    "print()\n",
-    "print('Shape of the image : {}'.format(pic.shape))\n",
-    "print('Image Hight {}'.format(pic.shape[0]))\n",
-    "print('Image Width {}'.format(pic.shape[1]))\n",
-    "print('Dimension of Image {}'.format(pic.ndim))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f1db12b-b1d0-4c25-b15a-ec8f456b936d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "706*611"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b04d212c-d224-456b-bf12-a715a095e119",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "im = Image.open(fname)\n",
-    "im.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7e3ac6e-6caf-40ef-96fa-e331fcc14bd0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pic.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8d1c5dc-8c26-439b-a23f-b60c9012950c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imarray = np.array(im)\n",
-    "imarray"
    ]
   }
  ],
