better saving management

--- a/case_studies/case-study-5_image_classification/weed_detection.ipynb
+++ b/case_studies/case-study-5_image_classification/weed_detection.ipynb
@@ -6545,9 +6545,7 @@
         "    epochs=EPOCHS_FINE,\n",
         "    callbacks=callbacks,\n",
         "    verbose=1\n",
-        ")\n",
-        "\n",
-        "model.save(\"resnet50_final.keras\")"
+        ")"
       ],
       "metadata": {
         "colab": {
@@ -6816,6 +6814,28 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Saving the model\n",
+        "\n",
+        "The following block saves the keras blob in the local folder. If you are running this notebook remotely (e.g. on google colab) don't forget to save a copy of this file, since it will be lost once the remote instance is deleted."
+      ],
+      "metadata": {
+        "id": "MAwTsaF_Y9px"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save(\"resnet50_final_notest.keras\")"
+      ],
+      "metadata": {
+        "id": "uT0qCrCZZJJm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
