updated: definitions of orthophoto and orthomosaic

--- a/review1_drones2026-02/drones-4134001-done-x_version1/drone_images.bib
+++ b/review1_drones2026-02/drones-4134001-done-x_version1/drone_images.bib
@@ -69,7 +69,15 @@
   year={2024},
   publisher={AAAS}
 }
-
+@article{park2022deep,
+  title={Deep learning-based UAV image segmentation and inpainting for generating vehicle-free orthomosaic},
+  author={Park, Jisoo and Cho, Yong K and Kim, Sungjin},
+  journal={International Journal of Applied Earth Observation and Geoinformation},
+  volume={115},
+  pages={103111},
+  year={2022},
+  publisher={Elsevier}
+}
 @article{wang2024ihup,
   title={IHUP: An integrated high-throughput universal phenotyping software platform to accelerate unmanned-aerial-vehicle-based field plant phenotypic data extraction and analysis},
   author={Wang, Botao and Yang, Chenghai and Zhang, Jian and You, Yunhao and Wang, Hongming and Yang, Wanneng},
